tests/corpora/test262/manifest.tsv
# case_id	path	mode	reason
numeric-decimal-literals	test/language/literals/numeric/S7.8.3_A1.1_T1.js	run	official Test262 numeric literal smoke
boolean-literal-constructor	test/language/literals/boolean/S7.8.2_A1_T1.js	skip	requires the Boolean built-in and non-host function call semantics
variable-hoisting	test/language/statements/variable/S12.2_A1.js	skip	requires var hoisting, try/catch, assert.throws, and function expressions
string-negative-parse	test/language/literals/string/S7.8.4_A1.1_T1.js	skip	requires negative parse metadata and $DONOTEVALUATE harness handling
